fixed dark mode selected row color

--- a/src/styles/themes/dark.less
+++ b/src/styles/themes/dark.less
@@ -27,6 +27,9 @@
 
 @table-header-sort-bg: @table-select-color;
 @table-body-sort-bg: @table-select-color;
+
+@table-selected-row-bg: hsl(222, 20%, 39%);
+
 @alert-info-bg-color: hsl(204, 47%, 65%);
 
 // lit3 = #31587a
